Fixed card title alignment.

--- a/imports/ui/game/_game.scss
+++ b/imports/ui/game/_game.scss
@@ -252,8 +252,8 @@
   font-size: large;
   //white-space: nowrap;
 }
-.game-card:hover .card-title {
-  margin-right: 4.5rem;
+.game-card:not(.current):hover .card-title {
+  //margin-right: 4.5rem;
 }
 .game-card-menu {
   position: absolute;
@@ -343,7 +343,6 @@
   display: block;
 }
 
-
 /* VERTICAL MODE */
 @media screen and (max-width: 575px) and (orientation: portrait) {
 
@@ -378,10 +377,10 @@
     left: -10rem;
     min-height: auto;
   }
-  .game-card .card-title {
+  .game-card:not(.current) .card-title {
     text-align: right;
   }
-  .game-card:hover .card-title {
+  .clue-col:hover .game-card:not(.current) .card-title {
     text-align: left;
   }
   .game-card .card-header .menu {
